--- a/前端/css/main.css
+++ b/前端/css/main.css
@@ -101,41 +101,6 @@ li{
 	font-size: 0.9em;
 }
 
-/*province*/
-
-.province,.years{
-    width: 100%;
-    border: 1px solid #c2c2c2;
-	border-top: 4px solid #ffa600;
-	font-weight: 500;
-    padding: 15px 10px;
-    box-sizing: border-box;
-}
-.years{
-    border-top: none;
-    padding-bottom: 15px;
-}
-.province ul,.years ul{
-    overflow: hidden;
-}
-.province li,.years li{
-    float: left;
-}
-.province li a,.years li a{
-    display: block;
-    padding: 8px 12px;
-    font-size: 0.9em;
-    color: #000;
-}
-.province li a:hover,.years li a:hover{
-    color: #fff;
-    background: #3f6ac2;
-}
-.province li a.active,.years li a.active{
-    color: #fff;
-    background: #007bff;
-}
-
 /*title-line*/
 
 .top-title{
@@ -155,31 +120,36 @@ li{
 }
 
 @media (min-width: 768px){
-	.footer_contianer,.top_container {
+	.footer-contianer,.top-container,.body-container {
 		width: 70%;
 	}
 }
+@media (max-width: 1270px){
+	.body-container {
+		width: 90%;
+	}
+}
 @media (max-width: 768px){
-	.footer_contianer,.top_container {
+	.footer-contianer,.top-container,.body-container {
 		width: 90%;
 	}
 }
 
-.footer_contianer,.top_container {
+.footer-contianer,.top-container,.body-container {
 	margin: 0 auto;
 }
-.footer_logo{
+.footer-logo{
 	margin-top: 30px;
 	padding-top: 10px;
 	padding-bottom:10px; 
 	width: 100%;
 	max-width: 379px;
 }
-.connect_info {
+.connect-info {
 	margin: 0 auto;
 }
 
-.connect_info p {
+.connect-info p {
 	color: #c0c0c0;
 	margin-top: 1px;
 	margin-bottom: 1px;
@@ -188,7 +158,7 @@ li{
 	font-family: "微软雅黑";
 }
 
-.connect_info p:first-child {
+.connect-info p:first-child {
 	color: #c0c0c0;
 	font-size: 1.1em;
 	margin-top: 30px;
@@ -196,17 +166,17 @@ li{
 	font-family: "微软雅黑";
 }
 @media (min-width: 768px){
-	.copy_right {
+	.copy-right {
 		width: 70%;
 	}
 }
 @media (max-width: 768px){
-	.copy_right {
+	.copy-right {
 		width: 90%;
 	}
 }
 
-.copy_right {
+.copy-right {
 	font-size: 12px;
 	margin: 15px auto 0;
 	color: #707484;
@@ -218,23 +188,23 @@ li{
 	font-family: "微软雅黑";
 }
 
-.copy_right div {
+.copy-right div {
 	padding-right: 0px;
 	padding-left: 0px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
 
-.copy_right p {
+.copy-right p {
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
 
-.copyright_div{
+.copyright-div{
 	border-top: 1px solid #707484;
 }
 
-.ICP_style {
+.ICP-style {
 	text-align: right;
 }
 
@@ -257,156 +227,6 @@ li{
 }
 .foot-color .foot-color-e {
     background-color: #ae74ac;
-}
-
-/*enroll form*/
-
-.enroll-frame{
-	border: 1px solid #ccc;
-	margin: 20px 10px;
-	padding: 20px;
-	border-radius: 3px;
-}
-.enroll-form{
-	border: 1px solid #c2c2c2;
-	padding: 15px;
-	border-radius: 3px;
-}
-
-/*enroll-show*/
-
-.enroll-show{
-	background: url("../img/hitbr.png") no-repeat center;
-	background-size: 50%;
-	width: 100%;
-	font-family:  "STXinwei","KaiTi",SimSun;
-}
-.enroll_stuName{
-	margin-top: 25px;
-	padding: 30px;
-	font-size: 48px;
-}
-.enroll_info{
-	margin-top: 10px;
-	padding-left: 30px;
-	font-size: 38px;
-}
-.enroll_school{
-	margin-top: 10px;
-	padding-left: 30px;
-	font-size: 38px;
-}
-.enroll_footer{
-	margin-top: 10px;
-	padding-left: 30px;
-	font-size: 16px;
-	text-align: right;
-	color: #8d8d8d;
-	font-family: SimSun;
-}
-#enroll_form{
-	font-family: SimSun;
-}
-@media (max-width: 768px){
-	.enroll-show{
-		background: url("../img/hitbr.png") no-repeat center;
-		background-size: 70%;
-		width: 100%;
-		font-family:  "STXinwei","KaiTi",SimSun;
-	}
-	.enroll_stuName{
-		margin-top: 25px;
-		padding: 30px;
-		font-size: 40px;
-	}
-	.enroll_info{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 28px;
-	}
-	.enroll_school{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 28px;
-	}
-	.enroll_footer{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 13px;
-		text-align: right;
-		color: #8d8d8d;
-		font-family: SimSun;
-	}
-}
-@media (max-width: 512px){
-	.enroll-show{
-		background: url("../img/hitbr.png") no-repeat center;
-		background-size: 70%;
-		width: 100%;
-		font-family:  "STXinwei","KaiTi",SimSun;
-	}
-	.enroll_stuName{
-		margin-top: 25px;
-		padding: 30px;
-		font-size: 37px;
-	}
-	.enroll_info{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 20px;
-	}
-	.enroll_school{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 20px;
-	}
-	.enroll_footer{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 13px;
-		text-align: right;
-		color: #8d8d8d;
-		font-family: SimSun;
-	}
-}
-@media (max-width: 366px){
-	.enroll-show{
-		background: url("../img/hitbr.png") no-repeat center;
-		background-size: 80%;
-		width: 100%;
-		font-family: "STXinwei","KaiTi",SimSun;
-	}
-	.enroll_info{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 18px;
-	}
-	.enroll_school{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 18px;
-	}
-	.enroll_footer{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 11px;
-		text-align: right;
-		color: #8d8d8d;
-		font-family: SimSun;
-	}
-}
-@media (max-width: 340px){
-	.enroll-show{
-		background: url("../img/hitbr.png") no-repeat center;
-		background-size: 80%;
-		width: 100%;
-		font-family: "STXinwei","KaiTi",SimSun;
-	}
-	.enroll_info{
-		margin-top: 10px;
-		padding-left: 30px;
-		font-size: 17px;
-	}
 }
 
 ::-webkit-scrollbar-track-piece{
